fixed spacing issue on smaller displays

--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,19 @@ header {
     padding-left: 5px;
 }
 
+header > h1 {
+    font-size: 26px;
+    margin-top: 40px;
+}
+
 img {
     width: 100px;
     height: 110px;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 #main-container {
-    width: 99%;
+    width: 98%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
